# eurusd-pred

./: README.md  ewma.py  ewrls.py  main.py  performance.py  pyproject.toml  testing.ipynb
histdata_free/: DAT_NT_EURUSD_M1_2023.txt
