[tool.poetry]
name = "eurusd-pred"
version = "0.1.0"
description = ""
authors = ["Ben <ben@danziger.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
ipython = "^8.29.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
plotly = "^5.24.1"
scikit-optimize = "^0.10.2"
constant = "^0.0.4"
structlog = "^24.4.0"
requests = "^2.32.3"
matplotlib = "^3.9.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
